Add portfolio index page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Nalin Perotsur</h1>
+    <h1>WebCraft Studio</h1>
     <p>
       I build fast, modern websites for small businesses.<br />
       Clean design. Mobile friendly. Easy to maintain.
