--- a/index.html
+++ b/index.html
@@ -3,34 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web Developer Portfolio</title>
+  <title>Sidtabell med meny</title>
+
   <style>
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
       background: #0f172a;
       color: #e5e7eb;
-      margin: 0;
-      min-height: 100vh;
     }
 
-    /* Layout: sidomeny + innehåll */
-    .layout {
-      display: grid;
-      grid-template-columns: 260px 1fr;
-      min-height: 100vh;
-    }
-
-    aside {
-      border-right: 1px solid #1f2a44;
+    /* ☰ hamburgarknapp */
+    .menu-btn {
+      font-size: 28px;
+      cursor: pointer;
       padding: 16px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1001;
+    }
+
+    /* sidomeny */
+    aside {
+      position: fixed;
+      top: 0;
+      left: -260px; /* gömd */
+      width: 260px;
+      height: 100vh;
       background: #0b1224;
+      padding: 16px;
+      transition: left 0.3s ease;
+      z-index: 1000;
+      border-right: 1px solid #1f2a44;
     }
 
-    main {
-      padding: 24px;
+    aside.open {
+      left: 0;
     }
 
-    /* Sidtabell */
+    /* tabell */
     .sidetable {
       width: 100%;
       border-collapse: collapse;
@@ -39,96 +51,69 @@
 
     .sidetable caption {
       text-align: left;
-      font-weight: 700;
+      font-weight: bold;
       margin-bottom: 8px;
-      color: #e5e7eb;
     }
 
-    .sidetable th, .sidetable td {
+    .sidetable th,
+    .sidetable td {
       border: 1px solid #1f2a44;
       padding: 8px;
-      text-align: left;
-      vertical-align: top;
     }
 
     .sidetable th {
       background: #111c35;
     }
 
-    .note {
-      color: #94a3b8;
-      margin-top: 12px;
-      font-size: 14px;
-    }
-
-    /* Portfolio-stil */
-    .container {
-      max-width: 700px;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin: 0 0 0.5rem 0;
-    }
-
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #cbd5f5;
-    }
-
     a {
       color: #38bdf8;
       text-decoration: none;
-      font-weight: bold;
     }
 
-    a:hover { text-decoration: underline; }
+    main {
+      padding: 80px 24px;
+      max-width: 700px;
+      margin: auto;
+    }
   </style>
 </head>
 
 <body>
-  <div class="layout">
-    <aside>
-      <table class="sidetable" aria-label="Sidtabell">
-        <caption>Meny</caption>
-        <thead>
-          <tr>
-            <th>Sektion</th>
-            <th>Länk</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr><td>Hem</td><td><a href="#hem">Gå</a></td></tr>
-          <tr><td>Tjänster</td><td><a href="#tjanster">Gå</a></td></tr>
-          <tr><td>Projekt</td><td><a href="#projekt">Gå</a></td></tr>
-          <tr><td>Kontakt</td><td><a href="#kontakt">Gå</a></td></tr>
-        </tbody>
-      </table>
 
-      <p class="note">Klicka i tabellen för att hoppa till sektioner.</p>
-    </aside>
+  <!-- ☰ knapp -->
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
 
-    <main>
-      <div class="container">
-        <h1 id="hem">WebCraft Studio</h1>
-        <p>
-          I build fast, modern websites for small businesses.<br />
-          Clean design. Mobile friendly. Easy to maintain.
-        </p>
+  <!-- sidomeny -->
+  <aside id="sidebar">
+    <table class="sidetable">
+      <caption>Meny</caption>
+      <tr><td><a href="#hem">Hem</a></td></tr>
+      <tr><td><a href="#tjanster">Tjänster</a></td></tr>
+      <tr><td><a href="#projekt">Projekt</a></td></tr>
+      <tr><td><a href="#kontakt">Kontakt</a></td></tr>
+    </table>
+  </aside>
 
-        <h2 id="tjanster">Tjänster</h2>
-        <p>Landningssidor, företagshemsidor, enklare webbappar och SEO-grunder.</p>
+  <!-- innehåll -->
+  <main>
+    <h1 id="hem">WebCraft Studio</h1>
+    <p>Jag bygger snabba, moderna webbplatser.</p>
 
-        <h2 id="projekt">Projekt</h2>
-        <p>Här kan du lista exempelprojekt (länkar, screenshots, beskrivning).</p>
+    <h2 id="tjanster">Tjänster</h2>
+    <p>Webbdesign, HTML/CSS, responsiva sidor.</p>
 
-        <h2 id="kontakt">Kontakt</h2>
-        <p>
-          <a href="mailto:nalin.perotsur@example.com">Contact me</a>
-        </p>
-      </div>
-    </main>
-  </div>
+    <h2 id="projekt">Projekt</h2>
+    <p>Exempelprojekt visas här.</p>
+
+    <h2 id="kontakt">Kontakt</h2>
+    <p><a href="mailto:nalin.perotsur@example.com">Maila mig</a></p>
+  </main>
+
+  <script>
+    function toggleMenu() {
+      document.getElementById("sidebar").classList.toggle("open");
+    }
+  </script>
+
 </body>
 </html>
