--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     /* sidomeny */
     aside {
       position: fixed;
-      top: 50;
+      top: 100;
       left: -300px; /* gömd */
       width: 200px;
       height: 100vh;
@@ -66,7 +66,7 @@
     }
 
     a {
-      color: #38bdf8;
+      color: #b2bbbe;
       text-decoration: none;
     }
 
