--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     /* sidomeny */
     aside {
       position: fixed;
-      top: 100;
+      top: 100px;
       left: -300px; /* gömd */
       width: 200px;
       height: 100vh;
@@ -57,7 +57,6 @@
 
     .sidetable th,
     .sidetable td {
-      border: 1px solid #1f2a44;
       padding: 8px;
     }
 
