--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Times New Roman', Times, serif, sans-serif;
       background: #0f172a;
       color: #e5e7eb;
     }
