--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <p>Exempelprojekt visas här.</p>
 
     <h2 id="kontakt">Kontakt</h2>
-    <p><a href="mailto:nalin.perotsur@example.com">Maila mig</a></p>
+    <p><a href="mailto:nalin.perotsur@gmail.com">Email Us</a></p>
   </main>
 
   <script>
