--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
     <p>Exempelprojekt visas här.</p>
 
     <h2 id="kontakt">Kontakt</h2>
-    <p><a href="mailto:nalin.perotsur@gmail.com">Email Us</a></p>
+    <a href="mailto:nalin.perotsur@gmail.com"
+   target="_blank"
+   rel="noopener noreferrer">
+  Email Us
+</a>
+
   </main>
 
   <script>
