--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
 
   <!-- innehåll -->
   <main>
-    <h1 id="hem">WebCraft Studio</h1>
+    <h1 id="index.html">WebCraft Studio</h1>
     <p>Jag bygger snabba, moderna webbplatser.</p>
 
-    <h2 id="tjanster">Tjänster</h2>
+    <h2 id="tjanster.html">Tjänster</h2>
     <p>Webbdesign, HTML/CSS, responsiva sidor.</p>
 
-    <h2 id="projekt">Projekt</h2>
+    <h2 id="projekt.html">Projekt</h2>
     <p>Exempelprojekt visas här.</p>
 
-    <h2 id="kontakt">Kontakt</h2>
+    <h2 id="kontakt.html">Kontakt</h2>
     <a href="mailto:nalin.perotsur@gmail.com"
    target="_blank"
    rel="noopener noreferrer">
