--- a/tjanster.html
+++ b/tjanster.html
@@ -70,7 +70,7 @@
     <nav aria-label="Meny">
       <a href="index.html">Hem</a>
       <a href="tjanster.html">Tjänster</a>
-      <a href="projekt.html">Projekt</a>
+      <a href="project.html">Projekt</a>
       <a href="kontakt.html">Kontakt</a>
     </nav>
   </aside>
